--- a/print.html
+++ b/print.html
@@ -85,7 +85,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="foreword.html">Foreword</a></li><li class="chapter-item expanded affix "><a href="getting-started.html">Getting Started</a></li><li class="chapter-item expanded "><a href="introduction/index.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="sequencepaxos/index.html"><strong aria-hidden="true">2.</strong> SequencePaxos</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="sequencepaxos/communication.html"><strong aria-hidden="true">2.1.</strong> Communication</a></li><li class="chapter-item expanded "><a href="sequencepaxos/log.html"><strong aria-hidden="true">2.2.</strong> Reading and Writing</a></li><li class="chapter-item expanded "><a href="sequencepaxos/compaction.html"><strong aria-hidden="true">2.3.</strong> Compaction</a></li><li class="chapter-item expanded "><a href="sequencepaxos/reconfiguration.html"><strong aria-hidden="true">2.4.</strong> Reconfiguration</a></li><li class="chapter-item expanded "><a href="sequencepaxos/logging.html"><strong aria-hidden="true">2.5.</strong> Logging</a></li></ol></li><li class="chapter-item expanded "><a href="ble/index.html"><strong aria-hidden="true">3.</strong> Ballot Leader Election</a></li><li class="chapter-item expanded "><a href="runtime/index.html"><strong aria-hidden="true">4.</strong> Runtime</a></li><li class="chapter-item expanded affix "><a href="project.html">Project Info</a></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="foreword.html">Foreword</a></li><li class="chapter-item expanded affix "><a href="getting-started.html">Getting Started</a></li><li class="chapter-item expanded "><a href="introduction/index.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="sequencepaxos/index.html"><strong aria-hidden="true">2.</strong> SequencePaxos</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="sequencepaxos/storage.html"><strong aria-hidden="true">2.1.</strong> Storage</a></li><li class="chapter-item expanded "><a href="sequencepaxos/communication.html"><strong aria-hidden="true">2.2.</strong> Communication</a></li><li class="chapter-item expanded "><a href="sequencepaxos/log.html"><strong aria-hidden="true">2.3.</strong> Reading and Writing</a></li><li class="chapter-item expanded "><a href="sequencepaxos/compaction.html"><strong aria-hidden="true">2.4.</strong> Compaction</a></li><li class="chapter-item expanded "><a href="sequencepaxos/reconfiguration.html"><strong aria-hidden="true">2.5.</strong> Reconfiguration</a></li><li class="chapter-item expanded "><a href="sequencepaxos/logging.html"><strong aria-hidden="true">2.6.</strong> Logging</a></li></ol></li><li class="chapter-item expanded "><a href="ble/index.html"><strong aria-hidden="true">3.</strong> Ballot Leader Election</a></li><li class="chapter-item expanded "><a href="runtime/index.html"><strong aria-hidden="true">4.</strong> Runtime</a></li><li class="chapter-item expanded affix "><a href="project.html">Project Info</a></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -152,7 +152,7 @@
                         <h1 id="foreword"><a class="header" href="#foreword">Foreword</a></h1>
 <p>OmniPaxos is an in-development replicated log library implemented in Rust. OmniPaxos aims to hide the complexities of consensus to provide users a replicated log that is as simple to use as a local log. </p>
 <p>Similar to Raft, OmniPaxos can be used to build strongly consistent services such as replicated state machines. Additionally, the leader election of OmniPaxos offers better resilience to partial connectivity and more flexible and efficient reconfiguration compared to Raft.</p>
-<p>The library consist of two parts: <code>omnipaxos_core</code> and <code>omnipaxos_runtime</code>. The <code>omnipaxos_core</code> implements the algorithms of OmniPaxos as plain Rust structs and is suitable for integration with systems that already have an async runtime or are implemented in an actor framework. It requires users to implement the interaction between the different structs themselves as we describe <a href="ble/index.html">here</a>. If you just want a replicated log out of the box, we suggest using <code>omnipaxos_runtime</code> instead, which hides all the interactions from the user by using <a href="https://tokio.rs/">Tokio</a>.</p>
+<p>The library consist of three parts: <code>omnipaxos_core</code>, <code>omnipaxos_runtime</code> and <code>omnipaxos_storage</code>. The <code>omnipaxos_core</code> implements the algorithms of OmniPaxos as plain Rust structs and is suitable for integration with systems that already have an async runtime or are implemented in an actor framework. It requires users to implement the interaction between the different structs themselves as we describe <a href="ble/index.html">here</a>. If you just want a replicated log out of the box, we suggest using <code>omnipaxos_runtime</code> instead, which hides all the interactions from the user by using <a href="https://tokio.rs/">Tokio</a>. You can provide your own implementation for storing the log and state of OmniPaxos, but we also provide both in-memory and persistent storage implementations that work out of the box in <code>omnipaxos_storage</code>.</p>
 <p>All the code from the tutorial can be found in <a href="https://github.com/haraldng/omnipaxos/tree/master/examples">examples</a>. In addition to the tutorial style presentation in this book, examples of usages of OmniPaxos can be found in the <a href="https://github.com/haraldng/omnipaxos/tree/master/tests">tests</a>.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="getting-started"><a class="header" href="#getting-started">Getting Started</a></h1>
 <p>We aim to make a release on crates soon, but for now, the easiest way to use OmniPaxos is to have it as a GitHub dependency.</p>
@@ -196,10 +196,75 @@ pub struct KeyValue {
     pub value: u64,
 }
 </code></pre>
-<h2 id="storage"><a class="header" href="#storage">Storage</a></h2>
-<p>You are free to use any storage implementation with <code>SequencePaxos</code>. The only requirement is that it implements the <code>Storage</code> trait. OmniPaxos provides an in-memory storage implementation <code>MemoryStorage</code> which we will use in our example.
-For simplicity, we leave out some parts of the implementation for now (such as <a href="sequencepaxos/../compaction.html">Snapshots</a>).</p>
-<pre><code class="language-rust edition2018 no_run noplaypen">    // from the module storage::memory_storage
+<h2 id="creating-a-node"><a class="header" href="#creating-a-node">Creating a Node</a></h2>
+<p>With the structs for log entry and storage defined, we can now go ahead and create our <code>SequencePaxos</code> replica instance.  Let’s assume we want our KV-store to be replicated on three servers. On, say node 2, we would do the following: </p>
+<pre><code class="language-rust edition2018 no_run noplaypen">use omnipaxos_core::{
+    sequence_paxos::{SequencePaxos, SequencePaxosConfig},
+};
+use omnipaxos_storage::{
+    memory_storage::MemoryStorage,
+};
+
+// configuration with id 1 and the following cluster
+let configuration_id = 1;
+let _cluster = vec![1, 2, 3];
+
+// create the replica 2 in this cluster (other replica instances are created similarly with pid 1 and 3 on the other nodes)
+let my_pid = 2;
+let my_peers = vec![1, 3];
+
+let mut sp_config = SequencePaxosConfig::default();
+sp_config.set_configuration_id(configuration_id);
+sp_config.set_pid(my_pid);
+sp_config.set_peers(my_peers);
+
+let storage = MemoryStorage::&lt;KeyValue, ()&gt;::default();
+let mut sp = SequencePaxos::with(sp_config, storage);
+</code></pre>
+<p>For convenience, <code>SequencePaxosConfig</code> also features a constructor <code>SequencePaxosConfig::with_hocon()</code> that loads the values using <a href="https://vleue.com/hocon.rs/hocon/index.html">hocon</a>. One could then instead have the parameters in a file <code>config/node2.conf</code></p>
+<pre><code class="language-json">{
+    config_id: 1,
+    pid: 2,
+    log_file_path: &quot;/sequencepaxos/logs&quot;
+}
+</code></pre>
+<p>This can then be loaded to construct <code>SequencePaxosConfig</code>:</p>
+<pre><code class="language-rust edition2018 no_run noplaypen">let raw_cfg = HoconLoader::new()
+    .load_file(&quot;tests/config/node2.conf&quot;)
+    .expect(&quot;Failed to load hocon file&quot;)
+    .hocon()
+    .unwrap();
+
+let sp_config = SequencePaxosConfig::with_hocon(cfg);
+</code></pre>
+<h2 id="fail-recovery"><a class="header" href="#fail-recovery">Fail-recovery</a></h2>
+<p>To support Fail-recovery, we must ensure that our storage implementation can persist both the log entries and storage state. Upon recovery, we have to make sure that our <code>SequencePaxos</code> will start with the previously persisted state. To do so, we first re-create our storage with the same storage path as the previous instance. Then we create a <code>SequencePaxos</code> instance but use the persisted state as the <code>storage</code> argument. Lastly, we call <code>fail_recovery()</code> to correctly initialize the volatile state. We show an example using <a href="sequencepaxos/storage.html#persistentstorage"><code>PersistentStorage</code></a>.</p>
+<pre><code class="language-rust edition2018 no_run noplaypen">/* Re-creating our node after a crash... */
+
+// Configuration from previous storage
+let my_path = &quot;/my_old_path/&quot;;
+let my_log_opts = LogOptions::new(my_path);
+let persist_conf = PersistentStorageConfig::default();
+
+persist_conf.set_path(my_path); // set the path to the persistent storage
+my_config.set_commitlog_options(my_logopts);
+
+// Re-create storage with previous state, then create `SequencePaxos`
+let recovered_storage = PersistentStorage::open(persist_conf); 
+let mut recovered_paxos = SequencePaxos::with(sp_config, recovered_storage);
+recovered_paxos.fail_recovery();
+</code></pre>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="storage"><a class="header" href="#storage">Storage</a></h1>
+<p>You are free to use any storage implementation with <code>SequencePaxos</code>. The only requirement is that it implements the <code>Storage</code> trait. OmniPaxos includes the package <code>omnipaxos_storage</code> which provides two types of storage implementation that work out of the box: <code>MemoryStorage</code> and <code>PersistentStorage</code>.</p>
+<h2 id="importing-omnipaxos_storage"><a class="header" href="#importing-omnipaxos_storage">Importing <code>omnipaxos_storage</code></a></h2>
+<p>To use the provided storage implementations, we need to add <code>omnipaxos_storage</code> to the dependencies in the cargo file.</p>
+<pre><code class="language-rust edition2018 no_run noplaypen">[dependencies]
+omnipaxos_storage = { git = &quot;https://github.com/haraldng/omnipaxos&quot;, default-features = true } 
+</code></pre>
+<p><strong>If</strong> you <strong>do</strong> decide to implement your own storage, we recommend taking a look at <code>MemoryStorage</code> as a reference for implementing the functions required by <code>Storage</code>.</p>
+<h2 id="memorystorage"><a class="header" href="#memorystorage">MemoryStorage</a></h2>
+<p>An in-memory storage implementation, <code>MemoryStorage</code> offers fast reads and writes. This storage type will be used in our examples. For simplicity, we leave out some parts of the implementation for now (such as <a href="sequencepaxos/../compaction.html">Snapshots</a>).</p>
+<pre><code class="language-rust edition2018 no_run noplaypen">    // from the module omnipaxos_storage::memory_storage
     #[derive(Clone)]
     pub struct MemoryStorage&lt;T, S&gt;
     where
@@ -258,73 +323,62 @@ For simplicity, we leave out some parts of the implementation for now (such as <
             self.acc_round
         }
 
-        fn get_entries(&amp;self, from: u64, to: u64) -&gt; &amp;[T] {
-            self.log.get(from as usize..to as usize).unwrap_or(&amp;[])
+        fn get_entries(&amp;self, from: u64, to: u64) -&gt; Vec&lt;T&gt; {
+            self.log
+                .get(from as usize..to as usize)
+                .unwrap_or(&amp;[])
+                .to_vec()
         }
 
         fn get_log_len(&amp;self) -&gt; u64 {
             self.log.len() as u64
         }
 
-        fn get_suffix(&amp;self, from: u64) -&gt; &amp;[T] {
+        fn get_suffix(&amp;self, from: u64) -&gt; Vec&lt;T&gt; {
             match self.log.get(from as usize..) {
-                Some(s) =&gt; s,
-                None =&gt; &amp;[],
+                Some(s) =&gt; s.to_vec(),
+                None =&gt; vec![],
             }
         }
 
         fn get_promise(&amp;self) -&gt; Ballot {
             self.n_prom
         }
-        
         ...
     }
 </code></pre>
-<h2 id="creating-a-node"><a class="header" href="#creating-a-node">Creating a Node</a></h2>
-<p>With the structs for log entry and storage defined, we can now go ahead and create our <code>SequencePaxos</code> replica instance.  Let’s assume we want our KV-store to be replicated on three servers. On, say node 2, we would do the following: </p>
+<h2 id="persistentstorage"><a class="header" href="#persistentstorage">PersistentStorage</a></h2>
+<p><code>PersistentStorage</code> is a persistent storage implementation that stores the replicated log and the state of OmniPaxos. The struct uses <a href="https://crates.io/crates/commitlog">Commitlog</a> to store the replicated log, and the state is stored on <a href="https://crates.io/crates/sled">sled</a> by default. The state can be changed to be stored on <a href="https://crates.io/crates/rocksdb">RocksDB</a> instead of sled by using the feature <code>rocksdb</code>. Users can configure the path to log entries and OmniPaxos state, and storage-related options through <code>PersistentStorageConfig</code>. The configuration struct features a <code>default()</code> constructor for generating default configuration, and the constructor <code>with()</code> that takes the storage path and options as arguments. </p>
 <pre><code class="language-rust edition2018 no_run noplaypen">use omnipaxos_core::{
     sequence_paxos::{SequencePaxos, SequencePaxosConfig},
-    storage::{memory_storage::MemoryStorage},
 };
+use omnipaxos_storage::{
+    persistent_storage::{PersistentStorage, PersistentStorageConfig},
+};
+use commitlog::LogOptions;
+use sled::{Config};
 
-// configuration with id 1 and the following cluster
-let configuration_id = 1;
-let _cluster = vec![1, 2, 3];
+// user-defined configuration
+let my_path = &quot;my_storage&quot;
+let my_log_opts = LogOptions::new(my_path);
+let mut my_sled_opts = Config::new();
+my_sled_opts.path(self, my_path);
 
-// create the replica 2 in this cluster (other replica instances are created similarly with pid 1 and 3 on the other nodes)
-let my_pid = 2;
-let my_peers = vec![1, 3];
-
-let mut sp_config = SequencePaxosConfig::default();
-sp_config.set_configuration_id(configuration_id);
-sp_config.set_pid(my_pid);
-sp_config.set_peers(my_peers);
-
-let storage = MemoryStorage::&lt;KeyValue, ())&gt;::default();
-let mut sp = SequencePaxos::with(sp_config, storage);
+// generate default configuration and set user-defined options
+let mut my_config = PersistentStorageConfig::default();
+my_config.set_path(my_path);
+my_config.set_commitlog_options(my_logopts);
+my_config.set_sled_options(my_sled_opts);
 </code></pre>
-<p>For convenience, <code>SequencePaxosConfig</code> also features a constructor <code>SequencePaxosConfig::with_hocon()</code> that loads the values using <a href="https://vleue.com/hocon.rs/hocon/index.html">hocon</a>. One could then instead have the parameters in a file <code>config/node2.conf</code></p>
-<pre><code class="language-json">{
-    config_id: 1,
-    pid: 2,
-    log_file_path: &quot;/sequencepaxos/logs&quot;
-}
-</code></pre>
-<p>This can then be loaded to construct <code>SequencePaxosConfig</code>:</p>
-<pre><code class="language-rust edition2018 no_run noplaypen">let raw_cfg = HoconLoader::new()
-    .load_file(&quot;tests/config/node2.conf&quot;)
-    .expect(&quot;Failed to load hocon file&quot;)
-    .hocon()
-    .unwrap();
+<p>The same configuration can also be done with the constructor that takes arguments:</p>
+<pre><code class="language-rust edition2018 no_run noplaypen">let my_path = &quot;another_storage&quot;
+let my_logopts = LogOptions::new(my_path);
+let mut my_sled_opts = Config::new();
+my_sled_opts.path(my_path);
+my_sled_opts.new(true);
 
-let sp_config = SequencePaxosConfig::with_hocon(cfg);
-</code></pre>
-<h2 id="crash-recovery"><a class="header" href="#crash-recovery">Crash-recovery</a></h2>
-<p>To support crash-recovery, we have to make sure that our storage implementation persisted the values. Then upon recovery, we have to make sure that our <code>SequencePaxos</code> will be started with the previously persisted state. To do so, create <code>SequencePaxos</code> as earlier described but use the persisted state as the <code>storage</code> argument. Then, call <code>fail_recovery()</code> to correctly initialize the volatile state.</p>
-<pre><code class="language-rust edition2018 no_run noplaypen">/* Restarting our node after a crash... */
-let recovered_storage = ...;    // the recovered persistent state.
-let mut recovered_paxos = SequencePaxos::with(sp_config, recovered_storage);
-recovered_paxos.fail_recovery();
+// create configuration with given arguments
+let my_config = PersistentStorageConfig::with(my_path, my_logopts, my_sled_opts);
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="communication"><a class="header" href="#communication">Communication</a></h1>
 <p>As previously mentioned, the user has to send/receive messages between servers themselves. In this section, we show how the user should interact with <code>SequencePaxos</code> and its incoming and outgoing messages.</p>
