--- a/ble/index.html
+++ b/ble/index.html
@@ -84,7 +84,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../foreword.html">Foreword</a></li><li class="chapter-item expanded affix "><a href="../getting-started.html">Getting Started</a></li><li class="chapter-item expanded "><a href="../introduction/index.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="../sequencepaxos/index.html"><strong aria-hidden="true">2.</strong> SequencePaxos</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../sequencepaxos/storage.html"><strong aria-hidden="true">2.1.</strong> Storage</a></li><li class="chapter-item expanded "><a href="../sequencepaxos/communication.html"><strong aria-hidden="true">2.2.</strong> Communication</a></li><li class="chapter-item expanded "><a href="../sequencepaxos/log.html"><strong aria-hidden="true">2.3.</strong> Reading and Writing</a></li><li class="chapter-item expanded "><a href="../sequencepaxos/compaction.html"><strong aria-hidden="true">2.4.</strong> Compaction</a></li><li class="chapter-item expanded "><a href="../sequencepaxos/reconfiguration.html"><strong aria-hidden="true">2.5.</strong> Reconfiguration</a></li><li class="chapter-item expanded "><a href="../sequencepaxos/logging.html"><strong aria-hidden="true">2.6.</strong> Logging</a></li></ol></li><li class="chapter-item expanded "><a href="../ble/index.html" class="active"><strong aria-hidden="true">3.</strong> Ballot Leader Election</a></li><li class="chapter-item expanded "><a href="../runtime/index.html"><strong aria-hidden="true">4.</strong> Runtime</a></li><li class="chapter-item expanded affix "><a href="../project.html">Project Info</a></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../foreword.html">Foreword</a></li><li class="chapter-item expanded affix "><a href="../getting-started.html">Getting Started</a></li><li class="chapter-item expanded "><a href="../introduction/index.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="../omnipaxos/index.html"><strong aria-hidden="true">2.</strong> OmniPaxos</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../omnipaxos/storage.html"><strong aria-hidden="true">2.1.</strong> Storage</a></li><li class="chapter-item expanded "><a href="../omnipaxos/communication.html"><strong aria-hidden="true">2.2.</strong> Communication</a></li><li class="chapter-item expanded "><a href="../omnipaxos/log.html"><strong aria-hidden="true">2.3.</strong> Reading and Writing</a></li><li class="chapter-item expanded "><a href="../omnipaxos/leader_election.html"><strong aria-hidden="true">2.4.</strong> Leader Election</a></li><li class="chapter-item expanded "><a href="../omnipaxos/compaction.html"><strong aria-hidden="true">2.5.</strong> Compaction</a></li><li class="chapter-item expanded "><a href="../omnipaxos/reconfiguration.html"><strong aria-hidden="true">2.6.</strong> Reconfiguration</a></li><li class="chapter-item expanded "><a href="../omnipaxos/logging.html"><strong aria-hidden="true">2.7.</strong> Logging</a></li></ol></li><li class="chapter-item expanded "><a href="../ble/index.html" class="active"><strong aria-hidden="true">3.</strong> Ballot Leader Election</a></li><li class="chapter-item expanded "><a href="../runtime/index.html"><strong aria-hidden="true">4.</strong> Runtime</a></li><li class="chapter-item expanded affix "><a href="../project.html">Project Info</a></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -149,56 +149,12 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="ballot-leader-election"><a class="header" href="#ballot-leader-election">Ballot Leader Election</a></h1>
-<p>A unique feature of the Omni-Paxos protocol is guaranteed progress with one quorum-connected server using Ballot Leader Election (BLE). In this section, we will see how the leader election is used in OmniPaxos. Similar to <code>SequencePaxos</code>, <code>BallotLeaderElection</code> is represented as a Rust struct that should be started on every node in the cluster.</p>
-<p>The BLE protocol is based on exchanging heartbeats that should be received within some expected time. To represent time, <code>BallotLeaderElection</code> uses an internal logical clock. It has a <code>tick()</code> function that progresses its logical clock. The expected time that heartbeats should be received in is specified by <code>hb_delay</code> of <code>BLEConfig</code> constructor:</p>
-<pre><code class="language-rust edition2018 no_run noplaypen">use omnipaxos_core::ballot_leader_election::{BallotLeaderElection, BLEConfig};
-
-/* As before, we pretend we are node 2 */
-// configuration with id 1 and the following cluster
-let configuration_id = 1;
-let _cluster = vec![1, 2, 3];
-
-// create the replica 2 in this cluster (other replica instances are created similarly with pid 1 and 3 on other servers)
-let my_pid = 2;
-let my_peers = vec![1, 3];
-
-let mut ble_config = BLEConfig::default();
-ble_config.set_pid(my_pid);
-ble_config.set_peers(my_peers);
-ble_config.set_hb_delay(20);     // a leader timeout of 20 ticks
-
-let mut ble = BallotLeaderElection::with(ble_conf);
-</code></pre>
-<blockquote>
-<p><strong>Note:</strong> The <code>priority</code> parameter allows user to give desired servers a higher priority to become the leader. This is a best-effort approach upon a leader change.</p>
-</blockquote>
-<p>In this example, we created our <code>BallotLeaderElection</code> with a timeout of 20 ticks. Thus, if we call <code>ble.tick()</code> every 10ms, we will in practice be using a leader timeout of 200ms. Once a leader is elected/changed, <code>tick()</code> will return a <code>Ballot</code>. This should be passed by you, the user, to the corresponding local <code>SequencePaxos</code> instance using <code>handle_leader()</code>:</p>
-<pre><code class="language-rust edition2018 no_run noplaypen">let seq_paxos: SequencePaxos = ...; // create our node as in Chapter `SequencePaxos`
-
-// every 10ms call the following
-if let Some(leader) = ble.tick() {
-    // a new leader is elected, pass it to SequencePaxos.
-    seq_paxos.handle_leader(leader);
-}
-</code></pre>
-<h2 id="communication"><a class="header" href="#communication">Communication</a></h2>
-<p>Incoming and outgoing messages are handled in the same manner as in <code>SequencePaxos</code>. That is, the user, must fetch outgoing messages and send them over the network, and incoming messages must be passed to the <code>BallotLeaderElection</code> struct. </p>
-<pre><code class="language-rust edition2018 no_run noplaypen">// handle incoming message from network layer
-let ble_msg: BLEMessage = ...;    // message to this node e.g. `msg.to = 2`
-ble.handle(ble_msg);
-
-// send outgoing messages. This should be called periodically, e.g. every ms
-for out_msg in ble.get_outgoings_msgs() {
-    let receiver = out_msg.to;
-    // send out_msg to receiver on network layer
-}
-</code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                                                    <a rel="prev" href="../sequencepaxos/logging.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                                    <a rel="prev" href="../omnipaxos/logging.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
                         
@@ -212,7 +168,7 @@ for out_msg in ble.get_outgoings_msgs() {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                                    <a rel="prev" href="../sequencepaxos/logging.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                    <a rel="prev" href="../omnipaxos/logging.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
                 
