--- a/runtime/index.html
+++ b/runtime/index.html
@@ -84,7 +84,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../foreword.html">Foreword</a></li><li class="chapter-item expanded affix "><a href="../getting-started.html">Getting Started</a></li><li class="chapter-item expanded "><a href="../introduction/index.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="../sequencepaxos/index.html"><strong aria-hidden="true">2.</strong> SequencePaxos</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../sequencepaxos/storage.html"><strong aria-hidden="true">2.1.</strong> Storage</a></li><li class="chapter-item expanded "><a href="../sequencepaxos/communication.html"><strong aria-hidden="true">2.2.</strong> Communication</a></li><li class="chapter-item expanded "><a href="../sequencepaxos/log.html"><strong aria-hidden="true">2.3.</strong> Reading and Writing</a></li><li class="chapter-item expanded "><a href="../sequencepaxos/compaction.html"><strong aria-hidden="true">2.4.</strong> Compaction</a></li><li class="chapter-item expanded "><a href="../sequencepaxos/reconfiguration.html"><strong aria-hidden="true">2.5.</strong> Reconfiguration</a></li><li class="chapter-item expanded "><a href="../sequencepaxos/logging.html"><strong aria-hidden="true">2.6.</strong> Logging</a></li></ol></li><li class="chapter-item expanded "><a href="../ble/index.html"><strong aria-hidden="true">3.</strong> Ballot Leader Election</a></li><li class="chapter-item expanded "><a href="../runtime/index.html" class="active"><strong aria-hidden="true">4.</strong> Runtime</a></li><li class="chapter-item expanded affix "><a href="../project.html">Project Info</a></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../foreword.html">Foreword</a></li><li class="chapter-item expanded affix "><a href="../getting-started.html">Getting Started</a></li><li class="chapter-item expanded "><a href="../introduction/index.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="../omnipaxos/index.html"><strong aria-hidden="true">2.</strong> OmniPaxos</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../omnipaxos/storage.html"><strong aria-hidden="true">2.1.</strong> Storage</a></li><li class="chapter-item expanded "><a href="../omnipaxos/communication.html"><strong aria-hidden="true">2.2.</strong> Communication</a></li><li class="chapter-item expanded "><a href="../omnipaxos/log.html"><strong aria-hidden="true">2.3.</strong> Reading and Writing</a></li><li class="chapter-item expanded "><a href="../omnipaxos/leader_election.html"><strong aria-hidden="true">2.4.</strong> Leader Election</a></li><li class="chapter-item expanded "><a href="../omnipaxos/compaction.html"><strong aria-hidden="true">2.5.</strong> Compaction</a></li><li class="chapter-item expanded "><a href="../omnipaxos/reconfiguration.html"><strong aria-hidden="true">2.6.</strong> Reconfiguration</a></li><li class="chapter-item expanded "><a href="../omnipaxos/logging.html"><strong aria-hidden="true">2.7.</strong> Logging</a></li></ol></li><li class="chapter-item expanded "><a href="../ble/index.html"><strong aria-hidden="true">3.</strong> Ballot Leader Election</a></li><li class="chapter-item expanded "><a href="../runtime/index.html" class="active"><strong aria-hidden="true">4.</strong> Runtime</a></li><li class="chapter-item expanded affix "><a href="../project.html">Project Info</a></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -149,107 +149,6 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="runtime"><a class="header" href="#runtime">Runtime</a></h1>
-<p>Up to this point we have described how to work with the <code>SequencePaxos</code> and <code>BallotLeaderElection</code> structs from <code>omnipaxos_core</code>. They implement the core logic behind log replication and leader election, but require users to manually handle their interactions with each other with <code>tick()</code> and <code>handle_leader()</code> as described <a href="../ble/index.html">earlier</a>. To make it easier for users, we have prototyped a runtime called <code>omnipaxos_runtime</code> that handles this interaction with <a href="https://tokio.rs/">tokio</a>.</p>
-<h2 id="creating-an-omnipaxos-node"><a class="header" href="#creating-an-omnipaxos-node">Creating an OmniPaxos node</a></h2>
-<p>We will reuse the <a href="../sequencepaxos/index.html"><code>KeyValue</code></a> and <a href="../sequencepaxos/compaction.html"><code>KVSnapshot</code></a> from earlier chapters as our log entry and snapshot types. To create an <code>OmniPaxosNode</code>, we do the following:</p>
-<pre><code class="language-rust edition2018 no_run noplaypen">use omnipaxos_runtime::{
-    sequence_paxos::{SequencePaxos, SequencePaxosConfig},
-    storage::{memory_storage::MemoryStorage},
-};
-
-let _cluster = vec![1, 2, 3];
-
-// create node 2 in this cluster (other instances are created similarly with pid 1 and 3 on the other nodes)
-let my_pid = 2;
-let my_peers = vec![1, 3];
-
-let mut node_conf = NodeConfig::default();
-node_conf.set_pid(my_pid);
-node_conf.set_peers(my_peers);
-
-let storage = MemoryStorage::&lt;KeyValue, KVSnapshot&gt;::default();
-let mut op: OmniPaxosHandle&lt;KeyValue, KVSnapshot&gt; = OmniPaxosNode::new(node_conf, storage);
-
-let OmniPaxosHandle {
-    omni_paxos,
-    seq_paxos_handle,
-    ble_handle
-} = op;
-</code></pre>
-<p>The <code>OmniPaxosHandle</code> has three fields with the types: <code>OmniPaxosNode</code>, <code>SequencePaxosHandle</code>, and <code>BLEHandle</code>. <code>OmniPaxosNode</code> exposes a similar, but async API as <code>SequencePaxos</code> for <a href="../sequencepaxos/log.html">reading/writing</a>, <a href="../sequencepaxos/compaction.html">compaction</a>, and <a href="../sequencepaxos/reconfiguration.html">reconfiguration</a>. The <code>SequencePaxosHandle</code>, and <code>BLEHandle</code> are used for communication. We will now go through how you should be using each of these.</p>
-<h2 id="communication"><a class="header" href="#communication">Communication</a></h2>
-<p>Both the <code>SequencePaxosHandle</code>, and <code>BLEHandle</code> consist of two <a href="https://docs.rs/tokio/latest/tokio/sync/mpsc/index.html">tokio mpsc channels</a> each, one for incoming and one for outgoing messages. The user’s task is to read messages from the outgoing channel and send them out over the network, and push any received message from the network layer into the incoming channel. As an example, we will use tokio to spawn a separate thread for each of these tasks:</p>
-<pre><code class="language-rust edition2018 no_run noplaypen">let mut sp_in: mpsc::Sender&lt;Message&lt;KeyValue, KVSnapshot&gt;&gt; = seq_paxos_handle.incoming; 
-let mut sp_out: mpsc::Receiver&lt;Message&lt;KeyValue, KVSnapshot&gt;&gt; = seq_paxos_handle.outgoing; 
-
-let mut ble_in: mpsc::Sender&lt;BLEMessage&gt; = ble_handle.incoming;
-let mut ble_out: mpsc::Receiver&lt;BLEMessage&gt; = ble_handle.outgoing;
-
-tokio::spawn(async move {
-    // spawn thread to wait for any outgoing messages produced by SequencePaxos
-    while let Some(message) = sp_out.recv().await {
-        let receiver = message.to;
-        // send Sequence Paxos message over network to the receiver
-    }
-});
-
-tokio::spawn(async move {
-    // spawn thread to wait for any outgoing messages produced by BallotLeaderElection
-    while let Some(message) = ble_out.recv().await {
-        let receiver = message.to;
-        // send BLE message over network to the receiver
-    }
-});
-
-tokio::spawn(async move {
-    // spawn thread to wait for any incoming Sequence Paxos messages from the network layer
-    loop {
-        // pass message to SequencePaxos
-        let sp_msg = todo!(); // received message from network layer;
-        sp_in.send(sp_msg).await.expect(&quot;Failed to pass message to SequencePaxos&quot;);
-    }
-});
-
-tokio::spawn(async move {
-    // spawn thread to wait for any incoming BLE messages from the network layer
-    loop {
-        // pass message to BLE
-        let ble_msg = todo!(); // received message from network layer;
-        ble_in.send(ble_msg).await.expect(&quot;Failed to pass message to BallotLeaderElection&quot;);
-    }
-});
-</code></pre>
-<p>We leave the logic for receiving messages over the network as <code>todo!()</code>, since this depends on your, the user’s, network implementation.</p>
-<h2 id="log-interactions"><a class="header" href="#log-interactions">Log Interactions</a></h2>
-<p>Using the <code>OmniPaxosNode</code>, we will be able to call the functions of <code>SequencePaxos</code> but in an async manner. With the code below, we show how to perform the corresponding functionalities described in the <a href="../sequencepaxos/index.html">SequencePaxos</a> chapter.</p>
-<pre><code class="language-rust edition2018 no_run noplaypen">let _leader_pid = omni_paxos.get_current_leader().await;
-
-let write_entry = KeyValue {
-    key: String::from(&quot;a&quot;),
-    value: 123,
-};
-omni_paxos.append(write_entry).await.expect(&quot;Failed to append log&quot;);
-
-let _entries: Vec&lt;ReadEntry&lt;KeyValue, KVSnapshot&gt;&gt; = omni_paxos.read_entries(10..).await.expect(&quot;Failed to read entries&quot;);
-let _decided_entries: Vec&lt;ReadEntry&lt;KeyValue, KVSnapshot&gt;&gt; = omni_paxos.read_decided_suffix(0).await.expect(&quot;Failed to read decided suffix&quot;);
-
-let local_only = true;
-omni_paxos.snapshot(Some(100), local_only).await.expect(&quot;Failed to snapshot&quot;);
-
-/* Reconfiguration */
-// Node 3 seems to have crashed... let's replace it with node 4.
-let new_configuration = vec![1, 2, 4];
-let metadata = None;
-let rc = ReconfigurationRequest::with(new_configuration, metadata);
-omni_paxos
-    .reconfigure(rc)
-    .await
-    .expect(&quot;Failed to propose reconfiguration&quot;);
-</code></pre>
-<p>Here, we blocked on every call, but since the functions in <code>OmniPaxosNode</code> are async, it is also possible to spawn a thread for each and wait for them concurrently.</p>
-<blockquote>
-<p><strong>Note:</strong> The async functions in <code>OmniPaxosNode</code> currently returns when its local Sequence Paxos component has received the request. This implies that requests that require network communication is completed. e.g. when <code>append()</code> returns, it does NOT mean that the entry has been successfully decided yet. This functionality is planned to be added in the future.</p>
-</blockquote>
 
                     </main>
 
